# conan2-opencv

./: .gitignore  CMakeLists.txt  conanfile.py  readme.md
.conan/extensions/plugins/: cmd_wrapper.py
.conan/profiles/: incredibuild
include/: mjpgv.h  opencv.h
src/: main.cpp  mjpgv.cpp  opencv.cpp
test_package/: conanfile.py
